Add Good Jakarta EE Example.